--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@sanity/image-url": "^1.0.2",
     "clsx": "^2.1.0",
+    "gsap": "^3.12.5",
     "next": "14.1.4",
     "next-sanity": "^9.0.0",
     "react": "^18",
